# Justice-Guide

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  INTERVIEW_SCENARIOS.md  LICENSE  PROJECT_DOCUMENTATION.md  PROJECT_SUMMARY.md  PROTECTED_FILES.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  start_app.sh  streamlit_main.py  test_retrieval.py
apps/web/: .gitignore  Dockerfile  README.md  netlify.toml  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: BNSToggle.tsx  CitationChip.tsx  InputBar.tsx  QueryCard.tsx  ReferencePanel.tsx  ResponseBlock.tsx  Sidebar.tsx  justice-guide-client.tsx
apps/web/src/lib/: api.ts  citation-md.ts
data/: eval_dataset.json
dataset/corpus/: ipc_foundations.md  offences_against_person.md  offences_against_property.md  public_order_and_state.md
src/: bns_mapping.py  cache.py  config.py  data_retrieval.py  generate_answers.py  ingest.py  main.py  observability.py  pipeline.py  prompt_templates.py  prompts.py  query_enhancement.py  reranker.py  retrieval.py
src/evals/: eval_pipeline.py
tests/: conftest.py  test_pipeline.py
