[project]
name = "justice-guide"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.14"
dependencies = [
    "arize-phoenix[evals]==14.2.1",
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "llama-index-core>=0.14.20",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-faiss>=0.6.0",
    "openinference-instrumentation-langchain>=0.1.62",
    "pypdf>=6.10.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.4.0",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
